<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="SpUsage">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/MenuStyle">

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/appLayout"
        android:background="@color/grey_10">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.core.widget.NestedScrollView
                android:id="@+id/nested_scroll_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="none"
                android:scrollingCache="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        style="@style/fontRegularStyle"
                        android:text="@string/profile_setting"
                        android:textColor="@color/grey_500" />

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:visibility="visible"
                        app:cardCornerRadius="@dimen/padding0"
                        app:cardElevation="@dimen/padding2">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <LinearLayout
                                android:id="@+id/layoutNotification"
                                style="@style/settingLayout">

                                <ImageButton
                                    style="@style/settingImage"
                                    android:contentDescription="@string/cDescription"
                                    app:srcCompat="@drawable/ic_set_notifications"
                                    app:tint="@color/green_a_700" />

                                <TextView
                                    style="@style/fontLightSettingStyle"
                                    android:layout_marginEnd="@dimen/padding3"
                                    android:text="@string/notification" />

                                <androidx.appcompat.widget.SwitchCompat
                                    android:id="@+id/notificationOnOff"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginEnd="@dimen/padding10"
                                    android:checked="true"
                                    app:thumbTint="@color/switch_color_primary" />

                            </LinearLayout>

                            <View style="@style/settingHorizontalLine" />
                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                    <TextView
                        style="@style/fontRegularStyle"
                        android:text="@string/general_setting"
                        android:textColor="@color/grey_500" />

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:visibility="visible"
                        app:cardCornerRadius="@dimen/padding0"
                        app:cardElevation="@dimen/padding2">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">


                            <LinearLayout
                                android:id="@+id/layoutLogout"
                                style="@style/settingLayout">

                                <ImageButton
                                    style="@style/settingImage"
                                    android:contentDescription="@string/cDescription"
                                    app:srcCompat="@drawable/ic_set_exit_to_app"
                                    app:tint="@color/red_600" />

                                <TextView
                                    style="@style/fontLightSettingStyle"
                                    android:text="@string/strLogout" />

                                <ImageButton
                                    style="@style/settingImageGray"
                                    android:contentDescription="@string/cDescription" />

                            </LinearLayout>

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_regular"
                        android:gravity="center"
                        android:paddingTop="@dimen/padding10"
                        android:text="@string/app_company"
                        android:textSize="@dimen/font_twelve" />

                    <TextView
                        android:id="@+id/txtAppVersion"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_regular"
                        android:gravity="center"
                        android:paddingBottom="@dimen/padding10"
                        android:text="@string/settingVersion"
                        android:textSize="@dimen/font_twelve" />
                </LinearLayout>

            </androidx.core.widget.NestedScrollView>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>